cabal-version:      3.0
name:               peras-malonzo
version:            0.1.0.0
synopsis:           Peras generated code from Agda.
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>
category:           Network
build-type:         Simple

library
  exposed-modules:
    MAlonzo.Code.Peras.QQCD.State
    MAlonzo.Code.Peras.QQCD.Crypto
    MAlonzo.Code.Peras.QQCD.Protocol
    MAlonzo.Code.Peras.QQCD.Types
    MAlonzo.Code.Peras.QQCD.Util
    MAlonzo.Code.Peras.QQCD.Types.Instances
    MAlonzo.Code.Peras.QQCD.Crypto.Placeholders
    MAlonzo.Code.Peras.QQCD.Node.Model
    MAlonzo.Code.Peras.QQCD.Node.Preagreement
    MAlonzo.Code.Peras.QQCD.Node.Specification
    MAlonzo.Code.Haskell.Prim.Maybe
    MAlonzo.Code.Haskell.Prim.Tuple
    MAlonzo.RTE
  other-modules:
    MAlonzo.Code.Agda.Primitive
    MAlonzo.Code.Agda.Builtin.Equality
    MAlonzo.Code.Agda.Builtin.Bool
    MAlonzo.Code.Agda.Builtin.Nat
    MAlonzo.Code.Agda.Builtin.FromNeg
    MAlonzo.Code.Agda.Builtin.Char
    MAlonzo.Code.Agda.Builtin.List
    MAlonzo.Code.Agda.Builtin.Maybe
    MAlonzo.Code.Agda.Builtin.Sigma
    MAlonzo.Code.Agda.Builtin.String
    MAlonzo.Code.Agda.Builtin.FromString
    MAlonzo.Code.Agda.Builtin.Strict
    MAlonzo.Code.Agda.Builtin.Word
    MAlonzo.Code.Agda.Builtin.Int
    MAlonzo.Code.Agda.Builtin.FromNat
    MAlonzo.Code.Agda.Builtin.Unit
    MAlonzo.Code.Agda.Builtin.Float
    MAlonzo.Code.Agda.Builtin.Equality.Erase
    MAlonzo.Code.Agda.Builtin.TrustMe
    MAlonzo.Code.Agda.Builtin.Reflection
    MAlonzo.Code.Haskell.Prim
    MAlonzo.Code.Haskell.Prim.Bool
    MAlonzo.Code.Haskell.Prim.Integer
    MAlonzo.Code.Haskell.Prim.Word
    MAlonzo.Code.Haskell.Prim.Int
    MAlonzo.Code.Haskell.Prim.Either
    MAlonzo.Code.Haskell.Prim.List
    MAlonzo.Code.Haskell.Prim.Monoid
    MAlonzo.Code.Haskell.Prim.Double
    MAlonzo.Code.Haskell.Prim.Eq
    MAlonzo.Code.Haskell.Prim.Ord
    MAlonzo.Code.Haskell.Prim.Num
    MAlonzo.Code.Haskell.Prim.Foldable
    MAlonzo.Code.Haskell.Prim.String
    MAlonzo.Code.Haskell.Prim.Show
    MAlonzo.Code.Haskell.Prim.IO
    MAlonzo.Code.Haskell.Prim.Absurd
    MAlonzo.Code.Haskell.Prim.Functor
    MAlonzo.Code.Haskell.Prim.Applicative
    MAlonzo.Code.Haskell.Prim.Monad
    MAlonzo.Code.Haskell.Prim.Bounded
    MAlonzo.Code.Haskell.Prim.Enum
    MAlonzo.Code.Haskell.Prim.Traversable
    MAlonzo.Code.Haskell.Law.Equality
    MAlonzo.Code.Haskell.Law.Bool
    MAlonzo.Code.Haskell.Law.Eq.Def
    MAlonzo.Code.Haskell.Law.Eq.Bool
    MAlonzo.Code.Haskell.Law.Eq.Maybe
    MAlonzo.Code.Haskell.Law.Eq.Ordering
    MAlonzo.Code.Haskell.Law.Maybe
    MAlonzo.Code.Haskell.Law.Eq
    MAlonzo.Code.Haskell.Law.Ord.Def
    MAlonzo.Code.Haskell.Law.Ord.Bool
    MAlonzo.Code.Haskell.Law.Ord.Maybe
    MAlonzo.Code.Haskell.Law.Ord.Ordering
    MAlonzo.Code.Haskell.Law.Ord
    MAlonzo.Code.Haskell.Law.Functor.Def
    MAlonzo.Code.Haskell.Law.Functor.Maybe
    MAlonzo.Code.Haskell.Law.Functor.Either
    MAlonzo.Code.Haskell.Law.Functor.List
    MAlonzo.Code.Haskell.Law.Functor.IO
    MAlonzo.Code.Haskell.Law.Functor
    MAlonzo.Code.Haskell.Law.Applicative.Def
    MAlonzo.Code.Haskell.Law.Applicative.Maybe
    MAlonzo.Code.Haskell.Law.Applicative.Either
    MAlonzo.Code.Haskell.Law.Applicative.List
    MAlonzo.Code.Haskell.Law.Applicative.IO
    MAlonzo.Code.Haskell.Law.List
    MAlonzo.Code.Haskell.Law.Applicative
    MAlonzo.Code.Haskell.Law.Monad.Def
    MAlonzo.Code.Haskell.Law.Monad.IO
    MAlonzo.Code.Haskell.Law.Monad.Either
    MAlonzo.Code.Haskell.Law.Monad.List
    MAlonzo.Code.Haskell.Law.Monad.Maybe
    MAlonzo.Code.Haskell.Law.Monad
    MAlonzo.Code.Haskell.Law.Semigroup.Def
    MAlonzo.Code.Haskell.Law.Semigroup.List
    MAlonzo.Code.Haskell.Law.Semigroup.Either
    MAlonzo.Code.Haskell.Law.Semigroup.Maybe
    MAlonzo.Code.Haskell.Law.Monoid.Def
    MAlonzo.Code.Haskell.Law.Monoid.List
    MAlonzo.Code.Haskell.Law.Monoid.Maybe
    MAlonzo.Code.Haskell.Law.Monoid
    MAlonzo.Code.Haskell.Law
    MAlonzo.Code.Haskell.Prelude
    MAlonzo.Code.Level
    MAlonzo.Code.Function.Base
    MAlonzo.Code.Function.Definitions
    MAlonzo.Code.Function.Consequences
    MAlonzo.Code.Function.Consequences.Setoid
    MAlonzo.Code.Function.Consequences.Propositional
    MAlonzo.Code.Function.Structures
    MAlonzo.Code.Function.Bundles
    MAlonzo.Code.Function.Dependent.Bundles
    MAlonzo.Code.Function.Indexed.Relation.Binary.Equality
    MAlonzo.Code.Function.Structures.Biased
    MAlonzo.Code.Function.Strict
    MAlonzo.Code.Function.Core
    MAlonzo.Code.Function.Metric.Core
    MAlonzo.Code.Function.Metric.Definitions
    MAlonzo.Code.Function.Metric.Structures
    MAlonzo.Code.Function.Metric.Bundles
    MAlonzo.Code.Function.Metric.Nat.Core
    MAlonzo.Code.Function.Metric.Nat.Definitions
    MAlonzo.Code.Function.Metric.Nat.Structures
    MAlonzo.Code.Function.Metric.Nat.Bundles
    MAlonzo.Code.Function.Metric.Nat
    MAlonzo.Code.Data.Unit.Base
    MAlonzo.Code.Data.Unit.Polymorphic.Base
    MAlonzo.Code.Data.Unit.Properties
    MAlonzo.Code.Data.Irrelevant
    MAlonzo.Code.Data.Empty
    MAlonzo.Code.Data.Bool.Base
    MAlonzo.Code.Data.Bool.Properties
    MAlonzo.Code.Data.Sum.Base
    MAlonzo.Code.Data.Product.Base
    MAlonzo.Code.Data.These.Base
    MAlonzo.Code.Data.Empty.Irrelevant
    MAlonzo.Code.Data.Maybe.Base
    MAlonzo.Code.Data.Unit
    MAlonzo.Code.Data.Sign.Base
    MAlonzo.Code.Data.Parity.Base
    MAlonzo.Code.Data.Nat.Base
    MAlonzo.Code.Data.Nat.Properties
    MAlonzo.Code.Data.Nat
    MAlonzo.Code.Relation.Nullary.Negation.Core
    MAlonzo.Code.Relation.Nullary.Reflects
    MAlonzo.Code.Relation.Nullary.Decidable.Core
    MAlonzo.Code.Relation.Nullary.Negation
    MAlonzo.Code.Relation.Nullary.Decidable
    MAlonzo.Code.Relation.Binary.Core
    MAlonzo.Code.Relation.Binary.Definitions
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Properties
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Algebra
    MAlonzo.Code.Relation.Binary.Consequences
    MAlonzo.Code.Relation.Binary.Structures
    MAlonzo.Code.Relation.Binary.Bundles
    MAlonzo.Code.Relation.Binary.Construct.Flip.EqAndOrd
    MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
    MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
    MAlonzo.Code.Relation.Binary.Properties.Preorder
    MAlonzo.Code.Relation.Binary.Properties.Setoid
    MAlonzo.Code.Relation.Binary.Properties.Poset
    MAlonzo.Code.Relation.Binary.Properties.TotalOrder
    MAlonzo.Code.Relation.Binary.Reasoning.Syntax
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Double
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
    MAlonzo.Code.Relation.Binary.Reasoning.Setoid
    MAlonzo.Code.Relation.Binary.Reasoning.Preorder
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Core
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Definitions
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Structures
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Bundles
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
    MAlonzo.Code.Relation.Binary.Structures.Biased
    MAlonzo.Code.Relation.Binary.PropositionalEquality
    MAlonzo.Code.Relation.Binary.Morphism.Definitions
    MAlonzo.Code.Relation.Binary.Morphism.Structures
    MAlonzo.Code.Relation.Binary.Lattice.Definitions
    MAlonzo.Code.Relation.Binary.Lattice.Structures
    MAlonzo.Code.Relation.Binary.Lattice.Bundles
    MAlonzo.Code.Relation.Binary.Lattice
    MAlonzo.Code.Relation.Nullary
    MAlonzo.Code.Relation.Unary
    MAlonzo.Code.Relation.Binary
    MAlonzo.Code.Effect.Empty
    MAlonzo.Code.Effect.Choice
    MAlonzo.Code.Effect.Functor
    MAlonzo.Code.Effect.Applicative
    MAlonzo.Code.Effect.Monad
    MAlonzo.Code.Algebra.Core
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Base
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Definitions
    MAlonzo.Code.Algebra.Consequences.Base
    MAlonzo.Code.Algebra.Consequences.Setoid
    MAlonzo.Code.Algebra.Consequences.Propositional
    MAlonzo.Code.Algebra.Structures
    MAlonzo.Code.Algebra.Structures.Biased
    MAlonzo.Code.Algebra.Bundles.Raw
    MAlonzo.Code.Algebra.Bundles
    MAlonzo.Code.Algebra.Lattice.Structures
    MAlonzo.Code.Algebra.Lattice.Bundles.Raw
    MAlonzo.Code.Algebra.Lattice.Bundles
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Lattice.Properties.Semilattice
    MAlonzo.Code.Algebra.Lattice.Properties.Lattice
    MAlonzo.Code.Algebra.Lattice.Properties.DistributiveLattice
    MAlonzo.Code.Algebra.Lattice.Properties.BooleanAlgebra
    MAlonzo.Code.Algebra.Properties.Group
    MAlonzo.Code.Algebra.Properties.Semigroup
    MAlonzo.Code.Algebra.Properties.CommutativeSemigroup
    MAlonzo.Code.Algebra.Morphism.Definitions
    MAlonzo.Code.Algebra.Morphism.Structures
    MAlonzo.Code.Algebra.Morphism
    MAlonzo.Code.Algebra.Definitions.RawMagma
    MAlonzo.Code.Algebra
    MAlonzo.Code.Axiom.UniquenessOfIdentityProofs
    MAlonzo.Code.Function
    MAlonzo.Code.Induction
    MAlonzo.Code.Induction.WellFounded
    MAlonzo.RTE.Float
  hs-source-dirs:   src
  build-depends:
    , base >=4.9 && <5
    , binary
    , bytestring
    , hashable
    , peras-hs
    , text
  default-extensions:  StrictData
  default-language: Haskell2010
  ghc-options: 
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wno-deprecations
