cabal-version:      3.4
name:               peras-markov
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush
maintainer:         brian.bush@iohk.io
category:           Network
build-type:         Simple

common warnings
    ghc-options: -Wall -Wunused-packages

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Peras.Markov.Adversary
                      Peras.Markov.Adversary.CommonCandidate
                      Peras.Markov.Adversary.TwoChain
                      Peras.Markov.Class
                      Peras.Markov.Orphans
                      Peras.Markov.Polynomial
    build-depends:    QuickCheck,
                      base ^>=4.18.1.0,
                      containers,
                      data-default,
                      numeric-prelude,
                      prettyprinter,
    default-language: Haskell2010

executable  peras-markov
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    Paths_peras_markov
    build-depends:    base ^>=4.18.1.0,
                      data-default,
                      numeric-prelude,
                      peras-markov,
                      prettyprinter,
    default-language: Haskell2010

test-suite peras-markov-test
    type:             exitcode-stdio-1.0
    import:           warnings
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Peras.Markov.Adversary.CommonCandidateSpec
                      Peras.Markov.Adversary.TwoChainSpec
                      Peras.Markov.PolynomialSpec
    build-depends:    QuickCheck,
                      base ^>=4.18.1.0,
                      containers,
                      data-default,
                      hspec,
                      numeric-prelude,
                      peras-markov,
                      prettyprinter,
                      statistics,
    build-tool-depends:
       hspec-discover:hspec-discover
    default-language: Haskell2010
