cabal-version:      3.4
name:               peras-markov
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush
maintainer:         brian.bush@iohk.io
category:           Network
build-type:         Simple

common warnings
    ghc-options: -Wall -Wunused-packages -Werror

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Peras.Markov.Adversary
                      Peras.Markov.Adversary.CommonCandidate
                      Peras.Markov.Adversary.TwoChain
                      Peras.Markov.Class
                      Peras.Markov.Orphans
                      Peras.Markov.Polynomial
                      Peras.MarkovSim.Model
                      Peras.MarkovSim.Transition
                      Peras.MarkovSim.Types
    build-depends:    QuickCheck,
                      aeson,
                      base,
                      containers,
                      data-default,
                      mtl,
                      numeric-prelude,
                      parallel,
                      peras-simulation,
                      prettyprinter,
                      quickcheck-dynamic,
                      statistics,
    default-language: Haskell2010
    ghc-options: -O2

executable  peras-markov
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    Paths_peras_markov
    build-depends:    base,
                      containers,
                      data-default,
                      numeric-prelude,
                      optparse-applicative,
                      peras-markov,
                      prettyprinter,
                      time,
                      yaml,
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -O2

test-suite peras-markov-test
    type:             exitcode-stdio-1.0
    import:           warnings
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Peras.Markov.Adversary.CommonCandidateSpec
                      Peras.Markov.Adversary.TwoChainSpec
                      Peras.Markov.PolynomialSpec
                      Peras.MarkovSim.ModelSpec
    build-depends:    QuickCheck,
                      base,
                      containers,
                      data-default,
                      hspec,
                      mtl,
                      numeric-prelude,
                      peras-markov,
                      peras-simulation,
                      prettyprinter,
                      quickcheck-dynamic,
                      statistics,
    build-tool-depends:
       hspec-discover:hspec-discover
    default-language: Haskell2010
