[package]
name = "peras_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
# depend on netsim at bleeding edge for the moment
netsim = { git = "https://github.com/input-output-hk/ce-netsim", branch = "main" }

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "peras_rust"
crate-type = [ "cdylib", "staticlib"]

[dev-dependencies]
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
