cabal-version:      3.0
name:               peras-server
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wunused-packages

library
    import:           warnings

    exposed-modules:  Peras.Server
                      Peras.Server.App

    build-depends:    aeson,
                      base ^>=4.18.1.0,
                      contra-tracer,
                      data-default,
                      io-classes,
                      peras-simulation,
                      scotty,
                      text,
                      wai,
                      wai-extra,
                      wai-websockets,
                      warp,
                      websockets

    hs-source-dirs:   src

    default-language: Haskell2010

executable peras-server
    import:           warnings

    ghc-options:  -threaded -rtsopts

    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.1.0,
                      peras-server,

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
