cabal-version:      3.4
name:               peras-simulation
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io
category:           Testing
build-type:         Simple
extra-source-files: ReadMe.md
extra-doc-files:    CHANGELOG.md
data-dir:           golden
data-files:         *.json

custom-setup
  setup-depends: base
               , directory
               , filepath
               , process
               , Cabal


common warnings
    ghc-options: -Wall -Wunused-packages -Werror
                 -fno-warn-missing-pattern-synonym-signatures
                 -fno-warn-missing-signatures
                 -fno-warn-name-shadowing
                 -fno-warn-type-defaults
                 -fno-warn-unused-imports
                 -fno-warn-unused-matches

library
    import:           warnings
    exposed-modules: Peras.Abstract.Protocol.BlockCreation
                     Peras.Abstract.Protocol.Crypto
                     Peras.Abstract.Protocol.Conformance.Model
                     Peras.Abstract.Protocol.Conformance.Test
                     Peras.Abstract.Protocol.Diffusion
                     Peras.Abstract.Protocol.Environment
                     Peras.Abstract.Protocol.Fetching
                     Peras.Abstract.Protocol.Network
                     Peras.Abstract.Protocol.Network.Arbitrary
                     Peras.Abstract.Protocol.Node
                     Peras.Abstract.Protocol.Node.Model
                     Peras.Abstract.Protocol.Preagreement
                     Peras.Abstract.Protocol.Params
                     Peras.Abstract.Protocol.Trace
                     Peras.Abstract.Protocol.Types
                     Peras.Abstract.Protocol.Visualizer
                     Peras.Abstract.Protocol.Voting
                     Peras.Arbitraries
                     Peras.Block
                     Peras.Chain
                     Peras.Crypto
                     Peras.Event
                     Peras.Message
                     Peras.Numbering
                     Peras.Orphans
                     Peras.Util
                     -- details of voting
                     Peras.Voting.Vote
                     Peras.Voting.Arbitraries
    other-modules:   Peras.Abstract.Protocol.BytesModulo
    build-depends:    QuickCheck,
                      aeson,
                      base ^>=4.18.1.0,
                      base16-bytestring,
                      bytestring,
                      cardano-binary,
                      cardano-crypto-class ^>= 2.1,
                      cardano-crypto-praos,
                      cereal,
                      containers,
                      contra-tracer,
                      data-default,
                      deepseq,
                      generic-random,
                      hashable,
                      io-classes,
                      io-sim,
                      language-dot,
                      mtl,
                      pretty,
                      quickcheck-dynamic,
                      quickcheck-instances,
                      statistics,
                      stm,
                      text,
                      time,
    hs-source-dirs:   src
    default-language: Haskell2010

executable  peras-simulate
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Simulate.hs
    other-modules:    Paths_peras_simulation
    build-depends:    aeson
                    , base ^>=4.18.1.0
                    , bytestring
                    , data-default
                    , io-classes
                    , optparse-applicative
                    , peras-simulation
                    , yaml

executable  peras-visualize
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Visualize.hs
    other-modules:    Paths_peras_simulation
    build-depends:    aeson
                    , base ^>=4.18.1.0
                    , bytestring
                    , optparse-applicative
                    , peras-simulation

test-suite peras-simulation-test
    import:           warnings
    default-language: Haskell2010
    other-modules: Peras.Abstract.Protocol.BlockCreationSpec
                   Peras.Abstract.Protocol.Node.ModelSpec
                   Peras.Abstract.Protocol.NodeSpec
                   Peras.Abstract.Protocol.VotingSpec
                   Peras.ChainSpec
                   Peras.OrphansSpec
                   Paths_peras_simulation
                   -- voting
                   Peras.Voting.VoteSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:  QuickCheck
                  , base ^>=4.18.1.0
                  , bytestring
                  , cardano-binary
                  , containers
                  , contra-tracer
                  , data-default
                  , hspec
                  , hspec-golden-aeson
                  , io-classes
                  , mtl
                  , peras-simulation
                  , quickcheck-classes
                  , quickcheck-dynamic
    build-tool-depends:
       hspec-discover:hspec-discover
    ghc-options: -rtsopts -threaded

benchmark bench
  hs-source-dirs: bench/
  main-is:        Bench.hs
  type:           exitcode-stdio-1.0
  build-depends:
                  QuickCheck
                , aeson
                , base
                , bytestring
                , criterion
                , deepseq
                , peras-simulation

  ghc-options:    -threaded -rtsopts
