cabal-version:      3.4
name:               peras-simulation
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io
category:           Testing
build-type:         Simple
extra-source-files: ReadMe.md
extra-doc-files:    CHANGELOG.md
data-dir:           golden
data-files:         *.json

common warnings
    ghc-options: -Wall -Wunused-packages -Werror
                 -fno-warn-missing-pattern-synonym-signatures
                 -fno-warn-missing-signatures
                 -fno-warn-name-shadowing
                 -fno-warn-type-defaults
                 -fno-warn-unused-imports
                 -fno-warn-unused-matches

library
    import:           warnings
    exposed-modules: Peras.Prototype.BlockCreation
                     -- details of voting
                     Peras.Prototype.Crypto
                     Peras.Prototype.Diffusion
                     Peras.Prototype.Environment
                     Peras.Prototype.Fetching
                     Peras.Prototype.Network
                     Peras.Prototype.Network.Arbitrary
                     Peras.Prototype.Node
                     Peras.Prototype.Node.Model
                     Peras.Prototype.BlockSelection
                     Peras.Prototype.Trace
                     Peras.Prototype.Types
                     Peras.Prototype.Visualizer
                     Peras.Prototype.Voting
                     Peras.Arbitraries
                     Peras.Block
                     Peras.Chain
                     Peras.Conformance.Model
                     Peras.Conformance.Orphans
                     Peras.Conformance.Params
                     Peras.Conformance.Test
                     Peras.Conformance.Test.External
                     Peras.Conformance.Test.Prototype
                     Peras.Crypto
                     Peras.Event
                     Peras.Foreign
                     Peras.Message
                     Peras.Numbering
                     Peras.Orphans
                     Peras.Util
    other-modules:   Peras.Prototype.BytesModulo
    build-depends:    QuickCheck,
                      aeson,
                      base ,
                      base16-bytestring,
                      bytestring,
                      cereal,
                      containers,
                      contra-tracer,
                      data-default,
                      hashable,
                      generic-random,
                      io-classes,
                      io-sim,
                      language-dot,
                      mtl,
                      pretty,
                      quickcheck-dynamic,
                      quickcheck-instances,
                      stm,
                      text,
                      time
    hs-source-dirs:   src
    default-language: Haskell2010

executable  peras-simulation-pipe
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Pipe.hs
    other-modules:    Paths_peras_simulation
    build-depends:    aeson
                    , base
                    , bytestring
                    , containers
                    , contra-tracer
                    , data-default
                    , io-classes
                    , mtl
                    , optparse-applicative
                    , peras-simulation
                    , text

executable  peras-simulate
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Simulate.hs
    other-modules:    Paths_peras_simulation
    build-depends:    aeson
                    , base
                    , bytestring
                    , data-default
                    , io-classes
                    , optparse-applicative
                    , peras-simulation
                    , yaml

executable  peras-visualize
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Visualize.hs
    other-modules:    Paths_peras_simulation
    build-depends:    aeson
                    , base
                    , bytestring
                    , optparse-applicative
                    , peras-simulation

test-suite peras-simulation-test
    import:           warnings
    default-language: Haskell2010
    other-modules: Peras.Conformance.TestSpec
                   Peras.Prototype.BlockCreationSpec
                   Peras.Prototype.Node.ModelSpec
                   Peras.Prototype.NodeSpec
                   Peras.Prototype.VotingSpec
                   Peras.ChainSpec
                   Peras.OrphansSpec
                   Paths_peras_simulation
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:  QuickCheck
                  , base
                  , containers
                  , contra-tracer
                  , data-default
                  , hspec
                  , hspec-golden-aeson
                  , io-classes
                  , mtl
                  , peras-simulation
                  , quickcheck-classes
                  , quickcheck-dynamic
    build-tool-depends:
       hspec-discover:hspec-discover
    ghc-options: -rtsopts -threaded

executable peras-conformance-test
    import:           warnings
    default-language: Haskell2010
    other-modules: Peras.Conformance.ExternalSpec
                   Paths_peras_simulation
    hs-source-dirs:   app
    main-is:          External.hs
    build-depends:  QuickCheck
                  , aeson
                  , base
                  , bytestring
                  , data-default
                  , hspec
                  , mtl
                  , peras-simulation
                  , quickcheck-dynamic
    ghc-options: -rtsopts -threaded
