cabal-version:      3.0
name:               test-demo
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Maximilian Algehed
maintainer:         m.algehed@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common language
  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    MultiWayIf
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeFamilies
    ViewPatterns
    BangPatterns
    EmptyCase
    FunctionalDependencies
    DefaultSignatures
    PolyKinds
    PatternSynonyms
    TemplateHaskell
    ImplicitParams

library
  import: language
  exposed-modules:
    TestModelQC
    CommonTypes
    TestModel
  build-depends:
    base ^>=4.18.1.0,
    quickcheck-dynamic ^>= 3.4,
    QuickCheck,
    mtl
  hs-source-dirs: src

test-suite test-demo-test
  import: language
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.18.0.0,
    test-demo
